data/derived/fa15/progs/unify/prog0001.ml.out
Characters 89-101:
  		    then removeZero t
             ^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type unit
